--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,8 @@ body {
     display: block;
     margin: auto;
     width: 960px;
+    background-image: url('../images/mirrored_squares_@2X.png');
+}
+header {
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
