--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: Georgia, 'Times New Roman', Times, serif;
     background: #fff;
     height: 80px;
-    border-bottom: solid rgba(0, 0, 0, 0.664) 1.2px;
+    border-bottom: solid #000000a9 1.2px;
 }
 .name {
     background: #4aaaa5;
@@ -17,10 +17,21 @@ body {
     line-height: 40px;
     font-size: 36px;
     padding-top: 20px;
-    color: #fff;
 }
-#area {
+.area {
     display: block;
     margin: auto;
     width: 960px;
+    color: #fff;
+}
+.box {
+    background: #fff;
+    padding: 20px;
+    margin-top: 30px;
+}
+.title {
+    color: #4aaaa5;
+    font-size: 36px;
+    padding: 15px;
+    border-bottom: solid #3d3b3b5e 1.5px;
 }
