--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,10 +28,25 @@ body {
     background: #fff;
     padding: 20px;
     margin-top: 30px;
+    margin-bottom: 30px;
+    height: 500px;
 }
 .title {
     color: #4aaaa5;
     font-size: 36px;
     padding: 15px;
     border-bottom: solid #3d3b3b5e 1.5px;
+}
+.wrap { 
+    float: left;
+    margin: 0px 20px 20px 0px;
+}
+p {
+    font-family: Arial, Helvetica, sans-serif;
+    color: #777777;
+    line-height: 40px;
+    text-align: justify;
+}
+.clearing {
+    clear: both;
 }
