--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -52,11 +52,10 @@ p {
 }
 .mylinks {
     display: block;
-    margin: auto;
     float: right;
-    width: 960px;
+    margin-right: 150px;
+    margin-top: 50px;    
 }
 a {
     float: right;
-    /* margin-top: 30px; */
 }
