--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,8 @@
+
 body {
     display: block;
-    margin: auto;
+    height: 100%;
+    margin: 0;
     background-image: url('../images/mirrored_squares_@2X.png');
 }
 .top {
@@ -25,6 +27,7 @@ body {
     color: #fff;
 }
 .box {
+    overflow: auto;
     background: #fff;
     padding: 20px;
     margin-top: 30px;
@@ -44,8 +47,10 @@ body {
 p {
     font-family: Arial, Helvetica, sans-serif;
     color: #777777;
-    line-height: 40px;
     text-align: justify;
+}
+.sline {
+    line-height: 40px;
 }
 .clearing {
     clear: both;
@@ -58,4 +63,22 @@ p {
 }
 a {
     float: right;
+}
+a:hover {
+    font-style: italic;
+}
+#text {
+    width: 100%;
+    height: 20px;
+}
+#msg {
+    
+    width: 100%
+}
+.btn {
+    background-color: #4aaaa5;
+    width: 10%;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
 }
