--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,8 @@ body {
     background-image: url('../images/mirrored_squares_@2X.png');
 }
 .top {
+    min-height: 100%;
+    margin-bottom: -50px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background: #fff;
     height: 80px;
@@ -81,4 +83,13 @@ a:hover {
     height: 40px;
     color: #fff;
     font-size: 16px;
+}
+.bot {
+    background-color: #666666;
+    height: 30px;
+    border-top: 8px solid #4aaaa5;
+    text-align: center;
+    font-size: 10px;
+    line-height: 40px;
+    color: #fff;
 }
