--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ body {
     padding: 20px;
     margin-top: 30px;
     margin-bottom: 30px;
-    height: 500px;
+    height: 100%;
 }
 .title {
     color: #4aaaa5;
@@ -92,4 +92,7 @@ a:hover {
     font-size: 10px;
     line-height: 40px;
     color: #fff;
+}
+.marg {
+    padding: 15px;
 }
