--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,8 +91,12 @@ a:hover {
     text-align: center;
     font-size: 10px;
     line-height: 40px;
-    color: #fff;
+    color: #fff;    
 }
 .marg {
     padding: 15px;
 }
+img:hover {
+    height: 350px;
+    width: 300px;
+} 
